@@ -4,6 +4,6 @@ INCLUDES = -I$(srcdir)/../include
 lib_LTLIBRARIES = libYARP_OS.la
 
 # automake_expand libYARP_OS_la_SOURCES *.cpp
-libYARP_OS_la_SOURCES = Address.cpp Bottle.cpp BottleImpl.cpp BufferedConnectionWriter.cpp Carriers.cpp Companion.cpp ConstString.cpp Contact.cpp DgramTwoWayStream.cpp Dispatcher.cpp Election.cpp FakeFace.cpp FallbackNameClient.cpp FallbackNameServer.cpp HttpCarrier.cpp IConfig.cpp LocalCarrier.cpp Logger.cpp ManagedBytes.cpp McastCarrier.cpp Module.cpp NameClient.cpp NameConfig.cpp Name.cpp NameserCarrier.cpp NameServer.cpp NetType.cpp Network.cpp PortCommand.cpp PortCore.cpp PortCoreInputUnit.cpp PortCoreOutputUnit.cpp Port.cpp PortReaderBuffer.cpp PortWriterBuffer.cpp Property.cpp Protocol.cpp Random.cpp RateThread.cpp Run.cpp Semaphore.cpp ShmemHybridStream.cpp ShmemTwoWayStream.cpp SocketTwoWayStream.cpp Stamp.cpp StreamConnectionReader.cpp TcpFace.cpp Terminator.cpp Thread.cpp ThreadImpl.cpp Time.cpp UnitTest.cpp Value.cpp Vocab.cpp ydr.cpp 
+libYARP_OS_la_SOURCES = Address.cpp Bottle.cpp BottleImpl.cpp BufferedConnectionWriter.cpp Carriers.cpp Companion.cpp ConstString.cpp Contact.cpp DgramTwoWayStream.cpp Dispatcher.cpp DummyConnector.cpp Election.cpp FakeFace.cpp FallbackNameClient.cpp FallbackNameServer.cpp HttpCarrier.cpp IConfig.cpp LocalCarrier.cpp Logger.cpp ManagedBytes.cpp McastCarrier.cpp Module.cpp NameClient.cpp NameConfig.cpp Name.cpp NameserCarrier.cpp NameServer.cpp NetType.cpp Network.cpp PortCommand.cpp PortCore.cpp PortCoreInputUnit.cpp PortCoreOutputUnit.cpp Port.cpp PortReaderBuffer.cpp PortWriterBuffer.cpp Property.cpp Protocol.cpp Random.cpp RateThread.cpp Run.cpp Semaphore.cpp ShmemHybridStream.cpp ShmemTwoWayStream.cpp SocketTwoWayStream.cpp Stamp.cpp StreamConnectionReader.cpp TcpFace.cpp Terminator.cpp Thread.cpp ThreadImpl.cpp Time.cpp UnitTest.cpp Value.cpp Vocab.cpp ydr.cpp 
 
 libYARP_OS_la_LDFLAGS = -rpath $(libdir)
